commit para treinar ajustes no placeholder

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <div class="container">
             <div class="video-destaque">
-                <img src="https://via.placeholder.com/543x217" alt="video destaque">
+                <img src="https://via.placeholder.com/543x217/0000ff/808080?text=Obrigado Aline!" alt="video destaque">
 
                 <div class="informacoes">
                     <h1 class="titulo">
@@ -33,12 +33,12 @@
             </div>
 
             <div class="propaganda">
-                <img src="https://via.placeholder.com/270x56" alt="propaganda">             
+                <img src="https://via.placeholder.com/270x56/002299/808080?text=propaganda" alt="propaganda">             
             </div>
 
             <div class="videos-sugeridos">
                 <div class="video">
-                    <img src="https://via.placeholder.com/101x71" alt="video sugeridos">
+                    <img src="https://via.placeholder.com/101x71/990000?text=BORA" alt="video sugeridos">
 
                     <div class="informacoes">
                         <h2 class="titulo">
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="video">
-                    <img src="https://via.placeholder.com/101x71" alt="video sugeridos">
+                    <img src="https://via.placeholder.com/101x71/889966/111111?text=VIRAR" alt="video sugeridos">
 
                     <div class="informacoes">
                         <h2 class="titulo">
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="video">
-                    <img src="https://via.placeholder.com/101x71" alt="video sugeridos">
+                    <img src="https://via.placeholder.com/101x71/997600/000088?text=DEV!" alt="video sugeridos">
 
                     <div class="informacoes">
                         <h2 class="titulo">
